--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,67 @@
+appdirs==1.4.4
+astroid==2.5.2
+beautifulsoup4==4.9.3
+bs4==0.0.1
+cachetools==4.2.0
 certifi==2020.12.5
 chardet==4.0.0
+colorama==0.4.4
+cssselect==1.1.0
+cycler==0.10.0
+distlib==0.3.1
+fake-useragent==0.1.11
+filelock==3.0.12
+google-api-core==1.25.0
+google-api-python-client==1.12.8
+google-auth==1.24.0
+google-auth-httplib2==0.0.4
+google-auth-oauthlib==0.4.2
+googleapis-common-protos==1.52.0
+gspread==3.6.0
+httplib2==0.18.1
 idna==2.10
-joblib==1.0.1
+isort==5.8.0
+kiwisolver==1.3.1
+lazy-object-proxy==1.6.0
 lxml==4.6.2
+matplotlib==3.3.4
+mccabe==0.6.1
+mplfinance==0.12.7a5
 multitasking==0.0.9
-numpy==1.20.1
-pandas==1.2.3
-pyqtgraph==0.11.1
+numpy==1.20.0
+oauth2-client==1.2.0
+oauthlib==3.1.0
+pandas==1.2.1
+parse==1.19.0
+Pillow==8.1.0
+protobuf==3.14.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyee==8.1.0
+pylint==2.7.4
+pyparsing==2.4.7
+pyppeteer==0.2.5
+PyQt5==5.15.4
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.8.1
+pyquery==1.4.3
 PySide2==5.15.2
 python-dateutil==2.8.1
-pytz==2021.1
+pytz==2020.5
 requests==2.25.1
-scikit-learn==0.24.1
-scipy==1.6.1
+requests-html==0.10.0
+requests-oauthlib==1.3.0
+rsa==4.7
 shiboken2==5.15.2
 six==1.15.0
-sklearn==0.0
-threadpoolctl==2.1.0
-urllib3==1.26.3
+soupsieve==2.1
+TA-Lib @ file:///D:/Desk/TA_Lib-0.4.19-cp39-cp39-win_amd64.whl
+toml==0.10.2
+tqdm==4.59.0
+uritemplate==3.0.1
+urllib3==1.26.2
+virtualenv==20.4.2
+w3lib==1.22.0
+websockets==8.1
+wrapt==1.12.1
 yfinance==0.1.55
